HEAD
	+ Increased default max log size to 100 MB
	+ Backup and restore module's kerberos service password file
4.0.5
	+ Calling correctly to removeGroupShare from the CGI
	+ Fixed external AD keytab generation
	+ Enforce kerberos configuration in external AD mode
	+ Fixed typo in EBox::LDAP::ExternalAD::externalServicesPrincipals
	+ Added disable_uid_sync conf key to save resources when RSAT
	  or ADC mode is not used
	+ Migrate mailboxes when upgrading from Zentyal 3.2
4.0.4
	+ SysvolSync daemon now synchronize deleted GPOs.
	+ Fix sysvol replication broken in some environments.
	+ Forbid backup restore if the server has not the correct hostname
	+ Fix empty LDIF parsing loading DNS zones stored in LDB
4.0.3
	+ Nested OUs are properly shown in GPO Links tree
	+ Avoid notifying slaves while setting the password as it is does
	  by addUser called below
4.0.2
	+ Fix regression in showing the Administrator account
4.0.1
	+ A change in first or last name make DN to change
	+ Do not show administrator password in provision command
	+ Fix ADC mode from the wizard
4.0
	+ Re-enable user synchronization with Zentyal Cloud
	+ Proper notifications when a share is sync'ed with Zentyal Cloud
	+ Fix realUsers count to remove Administrator and Guest account from it
	+ Write broker configuration for mapiproxy server in openchange.conf
	+ Add daemon to check users and groups to have uidNumber and gidNumber
	+ Add confirmation when removing mail account via the edit user form
	+ Add hostname change confirmation dialog to wizard
	+ Fixed EBox::LDAPBase::lastModificationTime
	+ Join as additional domain controller on initial configuration wizard
	+ Name in Module Status is now "Domain Controller and File Sharing"
	+ Set version to 4.0
	+ Fix migration to preserve group type
	+ Do not complain about lack of ACL support with XFS filesystem
	+ Better error message when the root DSE is not found in external
	  AD mode
	+ Do not try to dump config backup if not provisioned